--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.4.14",
+    "sweetalert2-react-content": "^5.0.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
