--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "sweetalert2": "^11.4.14",
     "sweetalert2-react-content": "^5.0.0",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
